--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,8 @@ form input, form button {
 }
 
 #restaurant-info {
-	background: #ffffff;
+	/*background: #ffffff;*/
+	background-color: red;
 	width: 60%;
 	height: 30%;
 	margin: auto;
