--- a/static/css/style.css
+++ b/static/css/style.css
@@ -88,8 +88,26 @@ form input, form button {
 	margin-left: 20px;
 }
 
+#name {
+	font-size: 2em;
+}
+
 #rih-right {
 	margin-left: 20px;
 	width: 170px;
-	text-align: right;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+}
+
+#rating-container {
+	background: green;
+	text-align: center;
+	width: 50px;
+	height: 25px;
+	color: #ffffff;
+}
+
+#votes {
+	
 }
