--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,11 @@
 	src: url(../font/Ubuntu-R.ttf);
 }
 
+@font-face {
+	font-family: winecar;
+	src: url(../font/Champagne\ &\ Limousines.ttf);
+}
+
 #header {
 	background: url(../img/header.jpg);
 	background-repeat: no-repeat;
@@ -89,7 +94,14 @@ form input, form button {
 }
 
 #name {
+	font-family: winecar;
 	font-size: 2em;
+	font-weight: bold;
+	color: #E58800;
+}
+
+#local, #address, #votes {
+	color: #A0A0A0;
 }
 
 #rih-right {
@@ -108,6 +120,66 @@ form input, form button {
 	color: #ffffff;
 }
 
-#votes {
+
+/*loading animation*/
+#load-container {
 	
 }
+
+.lds-ellipsis {
+  display: none;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.lds-ellipsis div {
+  position: absolute;
+  top: 27px;
+  width: 11px;
+  height: 11px;
+  border-radius: 50%;
+  background: #E58800;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.lds-ellipsis div:nth-child(1) {
+  left: 6px;
+  animation: lds-ellipsis1 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(2) {
+  left: 6px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(3) {
+  left: 26px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(4) {
+  left: 45px;
+  animation: lds-ellipsis3 0.6s infinite;
+}
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(19px, 0);
+  }
+}
+
+/*end of loading animation*/
