--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,24 +13,9 @@
 	src: url("../font/Champagne\ &\ Limousines.ttf");
 }
 
-::-webkit-scrollbar {
-	width: 5px;
-}
-
-::-webkit-scrollbar-track {
-	background: #00C9FF; 
-}
-
-::-webkit-scrollbar-thumb {
-	background: #888; 
-}
-
-::-webkit-scrollbar-thumb:hover {
-	background: #4F5559; 
-}
-
-::-webkit-scrollbar-track-piece {
-	background: #F1F1F1;
+@font-face {
+	font-family: juliet;
+	src: url("../font/Juliet.otf");
 }
 
 #header {
@@ -59,7 +44,7 @@
 
 h3 {
 	font-family: ubuntu;
-	font-style: italic;
+	/*font-style: italic;*/
 	color: #ff8500;
 	text-shadow: 2px 2px 3px #000000;
 }
@@ -97,11 +82,16 @@ form input, form button {
 	width: 880px;
 }
 
+#agda {
+	font-family: juliet;
+	font-size: 3em;
+}
+
 #restaurant-list {
 	background: #F1F1F1;
-	padding: 30px 0px 30px 0px;
+	padding: 30px 0px 2.5rem 0px;
 	margin-top: 30px;
-	margin-bottom: 30px;
+	margin-bottom: 80px;
 	display: none;
 }
 
@@ -127,11 +117,10 @@ form input, form button {
 #name {
 	font-family: winecar;
 	font-size: 2em;
-	font-weight: bold;
 	color: #E58800;
 }
 
-#local, #address, #votes {
+#local, #address, #votes, #phonenum-container {
 	color: #A0A0A0;
 }
 
@@ -145,24 +134,74 @@ form input, form button {
 
 #rating-container {
 	background-color: #009604;
-	text-align: center;
-	width: 80px;
+	/*text-align: center;*/
+	display: flex;
+	justify-content: center;
+	width: 40px;
 	height: 30px;
 	color: #ffffff;
 	border-radius: 5px;
 }
 
 #rating {
-	font-size: 1.2em;
+	font-size: 1em;
 }
 
 #votes-container {
-	width: 80px;
+	padding-top: 10px;
 	text-align: center;
 }
 
 #votes {
 	font-size: .8em;
+}
+
+#restaurant-info-footer {
+	width: 100%;
+	display: flex;
+	height: 35px;
+	justify-content: left;
+}
+
+#menu-container:hover , #url-container:hover {
+	cursor: pointer;
+	box-shadow: 0px 0px 2px 2px #C9C9C9;
+}
+
+#menu-container {
+	margin-right: 10px;
+	margin-left: 140px;
+	padding: 5px 10px 5px 10px;
+	background-color: #E58800;
+	display: flex;
+	border-radius: 3px;
+}
+
+#menu-container i, #menu-container a, #url-container i, #url-container a {
+	color: #ffffff;
+}
+
+#menu, #url, #phonenum {
+	margin-left: 5px;
+}
+
+#menu, #url {
+	font-size: .8em;
+	text-decoration: none;
+	outline: none;
+}
+
+#url-container {
+	padding: 5px 10px 5px 10px;
+	background-color: #E58800;
+	display: flex;
+	border-radius: 3px;
+}
+
+#phonenum-container {
+	padding: 5px 10px 5px 10px;
+ 	display: flex;
+ 	width: 500px;
 }
 
 /*loading animation*/
@@ -241,4 +280,20 @@ form input, form button {
 
 .btn-circle:focus {
 	outline: 0;
+}
+
+.footer {
+	background-color: #2D2D2D;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	bottom: 0px;
+	position: fixed;
+	padding: 10px;
+}
+
+.footer p {
+	color: #ffffff;
+	margin: 0;
 }
